--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ pandas = "~1.5.3"
 ## pip dependencies
 geoh5py = {version = "~0.8.0rc3", source = "pypi", allow-prereleases = true}
 #geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/main.tar.gz#sha256=" }
+#geoapps-utils = { url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/develop.zip#sha256=" }
+octree-creation-app = { url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256=" }
+mira-omf = {version = "~3.0.0", source = "pypi", allow-prereleases = true}
+#mira-omf = {url = "https://github.com/MiraGeoscience/omf/archive/refs/heads/develop.zip#sha256="}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 h5py = "*" # from geoh5py
