--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,19 +15,31 @@ my_app_hello = 'simpeg_drivers.commands.hello'
 python = "^3.9, <3.11"
 numpy = "~1.23.5" # also geoh5py, simpeg and geoana
 scipy = "~1.10.1"
-pandas = "~1.5.3"
+discretize = {version = "~0.10.0"}
 
 ## pip dependencies
 geoh5py = {version = "~0.8.0rc3", source = "pypi", allow-prereleases = true}
-#geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/main.tar.gz#sha256=" }
-#geoapps-utils = { url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/develop.zip#sha256=" }
-octree-creation-app = { url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256=" }
-mira-omf = {version = "~3.0.0", source = "pypi", allow-prereleases = true}
-#mira-omf = {url = "https://github.com/MiraGeoscience/omf/archive/refs/heads/develop.zip#sha256="}
+#geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/tags/v0.8.0-rc.2.zip#sha256="}
+#octree-creation-app = {version = "~0.1.0a1", source = "pypi", allow-prereleases = true}
+octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/GEOPY-1235.zip#sha256="}
+#simpeg-archive = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/feature/simpeg_archive.zip#sha256="}
+simpeg-archive = {version = "~0.11.0.dev6", source = "pypi", optional = true}
+#mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev3+geoapps.0.11.0.zip#sha256=", optional = true}
+mira-simpeg = {version = "~0.19.0.dev4", source = "pypi", optional = true}
+param-sweeps = {version = "~0.1.6a1", source = "pypi", allow-prereleases = true}
+#param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/develop.zip#sha256="}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
+dask = {version = "2022.10.*", extras = ["distributed"]}
+distributed = {version = "2022.10.*"}  # because conda-lock doesn't take dask extras into account
+geoana = {version = "~0.4.0"}  # from simpeg
 h5py = "*" # from geoh5py
+mkl = {version = "2022.*"}  # from simpeg
 Pillow = "*" # from geoh5py
+pydiso = {version = "~0.0.3", optional = true} # from simpeg
+pymatsolver = {version = "~0.2.0", optional = true} # from simpeg
+tqdm = {version = "^4.64.0", optional = true }
+zarr = {version = "~2.14.2", optional = true} # from simpeg using Dask
 
 ## about pip dependencies
 # to be specified to work with conda-lock
