--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,19 +20,19 @@ repos:
     hooks:
     -   id: isort
         additional_dependencies: [tomli] # to read config from pyproject.toml
--   repo: https://github.com/humitos/mirrors-autoflake
-    rev: v1.1
-    hooks:
-    -   id: autoflake
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-    -   id: flake8
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-    -   id: pyupgrade
-        args: [--py39-plus]
+#-   repo: https://github.com/humitos/mirrors-autoflake
+#    rev: v1.1
+#    hooks:
+#    -   id: autoflake
+#-   repo: https://github.com/PyCQA/flake8
+#    rev: 6.1.0
+#    hooks:
+#    -   id: flake8
+#-   repo: https://github.com/asottile/pyupgrade
+#    rev: v3.15.0
+#    hooks:
+#    -   id: pyupgrade
+#        args: [--py39-plus]
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.6.1
     hooks:
@@ -47,32 +47,32 @@ repos:
     hooks:
     -   id: relint
         args: [-W]  # to fail on warnings
--   repo: local
-    hooks:
-    -   id: pylint
-        name: pylint
-        entry: .\\devtools\\conda_env_pylint.bat
-        language: system
-        require_serial: true  # pylint does its own parallelism
-        types: [python]
-        exclude: ^(devtools|docs)/
-    -   id: check-copyright
-        name: Check copyright
-        entry: python devtools/check-copyright.py
-        language: python
-        types: [text]
-        files: (^LICENSE|^README(|-dev).rst|\.py|\.pyi)$
-        exclude: (^\.|^docs/)
-    -   id: prepare-commit-msg
-        stages: [prepare-commit-msg]
-        name: Prepare commit message
-        entry: python devtools/git_message_hook.py --prepare
-        language: python
-    -   id: check-commit-msg
-        stages: [commit-msg]
-        name: Check commit message
-        entry: python devtools/git_message_hook.py --check
-        language: python
+#-   repo: local
+#    hooks:
+#    -   id: pylint
+#        name: pylint
+#        entry: .\\devtools\\conda_env_pylint.bat
+#        language: system
+#        require_serial: true  # pylint does its own parallelism
+#        types: [python]
+#        exclude: ^(devtools|docs)/
+#    -   id: check-copyright
+#        name: Check copyright
+#        entry: python devtools/check-copyright.py
+#        language: python
+#        types: [text]
+#        files: (^LICENSE|^README(|-dev).rst|\.py|\.pyi)$
+#        exclude: (^\.|^docs/)
+#    -   id: prepare-commit-msg
+#        stages: [prepare-commit-msg]
+#        name: Prepare commit message
+#        entry: python devtools/git_message_hook.py --prepare
+#        language: python
+#    -   id: check-commit-msg
+#        stages: [commit-msg]
+#        name: Check commit message
+#        entry: python devtools/git_message_hook.py --check
+#        language: python
 -   repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
