--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - asciitree=0.3.3=py_2
   - astroid=3.0.2=py310h5588dad_0
+  - blis=0.9.0=hcfcfb64_1
   - brotli=1.1.0=hcfcfb64_1
   - brotli-bin=1.1.0=hcfcfb64_1
   - brotli-python=1.1.0=py310h00ffb61_1
@@ -20,11 +21,11 @@ dependencies:
   - cloudpickle=3.0.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - contourpy=1.2.0=py310h232114e_0
-  - coverage=7.4.0=py310h8d17308_0
+  - coverage=7.4.1=py310h8d17308_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.2=py310h8d17308_1
   - dask-core=2022.10.2=pyhd8ed1ab_0
-  - dill=0.3.7=pyhd8ed1ab_0
+  - dill=0.3.8=pyhd8ed1ab_0
   - discretize=0.10.0=py310h4856b71_1
   - distributed=2022.10.2=pyhd8ed1ab_0
   - empymod=2.2.2=pyhd8ed1ab_0
@@ -38,7 +39,7 @@ dependencies:
   - hdf5=1.14.3=nompi_h73e8ff5_100
   - idna=3.6=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
-  - intel-openmp=2024.0.0=h57928b3_49840
+  - intel-openmp=2024.0.0=h57928b3_49841
   - isort=5.13.2=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - kiwisolver=1.4.5=py310h232114e_1
@@ -46,20 +47,18 @@ dependencies:
   - lcms2=2.16=h67d730c_0
   - lerc=4.0.0=h63175ca_0
   - libaec=1.1.2=h63175ca_1
-  - libblas=3.9.0=21_win64_openblas
+  - libblas=3.9.0=21_win64_blis
   - libbrotlicommon=1.1.0=hcfcfb64_1
   - libbrotlidec=1.1.0=hcfcfb64_1
   - libbrotlienc=1.1.0=hcfcfb64_1
-  - libcblas=3.9.0=21_win64_openblas
+  - libcblas=3.9.0=21_win64_blis
   - libcurl=8.5.0=hd5e4a3a_0
   - libdeflate=1.19=hcfcfb64_0
   - libffi=3.4.2=h8ffe710_5
-  - libflang=5.0.0=h6538335_20180525
   - libhwloc=2.9.3=default_haede6df_1009
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
-  - liblapack=3.9.0=21_win64_openblas
-  - libopenblas=0.3.26=pthreads_hc140b1d_0
+  - liblapack=3.9.0=5_hd5c7e75_netlib
   - libpng=1.6.39=h19919ed_0
   - libsqlite=3.44.2=hcfcfb64_0
   - libssh2=1.11.0=h7dfc565_0
@@ -68,7 +67,6 @@ dependencies:
   - libxcb=1.15=hcd874cb_0
   - libxml2=2.12.4=hc3477c8_1
   - libzlib=1.2.13=hcfcfb64_5
-  - llvm-meta=5.0.0=0
   - llvmlite=0.41.1=py310hb84602e_0
   - locket=1.0.0=pyhd8ed1ab_0
   - m2w64-gcc-libgfortran=5.3.0=6
@@ -87,13 +85,12 @@ dependencies:
   - numcodecs=0.12.1=py310h00ffb61_0
   - numpy=1.23.5=py310h4a8f9c9_0
   - openjpeg=2.5.0=h3d672ee_3
-  - openmp=5.0.0=vc14_1
-  - openssl=3.2.0=hcfcfb64_1
+  - openssl=3.2.1=hcfcfb64_0
   - packaging=23.2=pyhd8ed1ab_0
   - partd=1.4.1=pyhd8ed1ab_0
   - pillow=10.2.0=py310h1e6a543_0
   - pip=23.3.2=pyhd8ed1ab_0
-  - platformdirs=4.1.0=pyhd8ed1ab_0
+  - platformdirs=4.2.0=pyhd8ed1ab_0
   - pluggy=1.4.0=pyhd8ed1ab_0
   - pooch=1.8.0=pyhd8ed1ab_0
   - psutil=5.9.8=py310h8d17308_0
@@ -102,10 +99,10 @@ dependencies:
   - pydiso=0.0.3=py310h847dae0_4
   - pygments=2.17.2=pyhd8ed1ab_0
   - pylint=3.0.3=pyhd8ed1ab_0
-  - pymatsolver=0.2.0=pyhd8ed1ab_0
+  - pymatsolver=0.2.0=py310h5588dad_2
   - pyparsing=3.1.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyh0701188_6
-  - pytest=7.4.4=pyhd8ed1ab_0
+  - pytest=8.0.0=pyhd8ed1ab_0
   - pytest-cov=4.1.0=pyhd8ed1ab_0
   - python=3.10.13=h4de0772_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
@@ -116,7 +113,7 @@ dependencies:
   - setuptools=69.0.3=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - tbb=2021.11.0=h91493d7_0
+  - tbb=2021.11.0=h91493d7_1
   - tblib=3.0.0=pyhd8ed1ab_0
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
@@ -130,7 +127,7 @@ dependencies:
   - tzdata=2023d=h0c530f3_0
   - ucrt=10.0.22621.0=h57928b3_0
   - unicodedata2=15.1.0=py310h8d17308_0
-  - urllib3=2.1.0=pyhd8ed1ab_0
+  - urllib3=2.2.0=pyhd8ed1ab_0
   - utm=0.7.0=pyhd8ed1ab_0
   - vc=14.3=hcf57466_18
   - vc14_runtime=14.38.33130=h82b7239_18
@@ -153,7 +150,7 @@ dependencies:
       - pandas === 2.2.0
       - param-sweeps === 0.1.6
       - properties === 0.6.1
-      - pytz === 2023.3.post1
+      - pytz === 2023.4
       - scikit-learn === 1.4.0
       - simpeg-archive === 0.11.0.dev6
       - threadpoolctl === 3.2.0
