--- a/environments/py-3.9-linux-64.conda.lock.yml
+++ b/environments/py-3.9-linux-64.conda.lock.yml
@@ -12,7 +12,7 @@ dependencies:
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py39h3d6467e_1
   - bzip2=1.0.8=hd590300_5
-  - c-ares=1.25.0=hd590300_0
+  - c-ares=1.26.0=hd590300_0
   - ca-certificates=2023.11.17=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -47,31 +47,31 @@ dependencies:
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
   - libaec=1.1.2=h59595ed_1
-  - libblas=3.9.0=21_linux64_openblas
+  - libblas=3.9.0=20_linux64_openblas
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
-  - libcblas=3.9.0=21_linux64_openblas
+  - libcblas=3.9.0=20_linux64_openblas
   - libcurl=8.5.0=hca28451_0
   - libdeflate=1.19=hd590300_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=h807b86a_3
-  - libgfortran-ng=13.2.0=h69a702a_3
-  - libgfortran5=13.2.0=ha4646dd_3
+  - libgcc-ng=13.2.0=h807b86a_4
+  - libgfortran-ng=13.2.0=h69a702a_4
+  - libgfortran5=13.2.0=ha4646dd_4
   - libhwloc=2.9.3=default_h554bfaf_1009
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=21_linux64_openblas
+  - liblapack=3.9.0=20_linux64_openblas
   - libllvm14=14.0.6=hcd5def8_4
   - libnghttp2=1.58.0=h47da74e_1
   - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.26=pthreads_h413a1c8_0
+  - libopenblas=0.3.25=pthreads_h413a1c8_0
   - libpng=1.6.39=h753d276_0
   - libsqlite=3.44.2=h2797004_0
   - libssh2=1.11.0=h0841786_0
-  - libstdcxx-ng=13.2.0=h7e041cc_3
+  - libstdcxx-ng=13.2.0=h7e041cc_4
   - libtiff=4.6.0=ha9c0a0a_2
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.3.2=hd590300_0
@@ -92,17 +92,17 @@ dependencies:
   - numcodecs=0.12.1=py39h3d6467e_0
   - numpy=1.23.5=py39h3d75532_0
   - openjpeg=2.5.0=h488ebb8_3
-  - openssl=3.2.0=hd590300_1
+  - openssl=3.2.1=hd590300_0
   - packaging=23.2=pyhd8ed1ab_0
   - partd=1.4.1=pyhd8ed1ab_0
   - pillow=10.2.0=py39had0adad_0
   - pip=23.3.2=pyhd8ed1ab_0
-  - platformdirs=4.1.0=pyhd8ed1ab_0
+  - platformdirs=4.2.0=pyhd8ed1ab_0
   - pooch=1.8.0=pyhd8ed1ab_0
   - psutil=5.9.8=py39hd1e30aa_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - pydiso=0.0.3=py39h051f8f4_4
-  - pymatsolver=0.2.0=pyhd8ed1ab_0
+  - pymatsolver=0.2.0=py39hf3d152e_2
   - pyparsing=3.1.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.9.18=h0755675_1_cpython
@@ -115,7 +115,7 @@ dependencies:
   - setuptools=69.0.3=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - tbb=2021.11.0=h00ab1b0_0
+  - tbb=2021.11.0=h00ab1b0_1
   - tblib=3.0.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toolz=0.12.1=pyhd8ed1ab_0
@@ -123,7 +123,7 @@ dependencies:
   - tqdm=4.66.1=pyhd8ed1ab_0
   - tzdata=2023d=h0c530f3_0
   - unicodedata2=15.1.0=py39hd1e30aa_0
-  - urllib3=2.1.0=pyhd8ed1ab_0
+  - urllib3=2.2.0=pyhd8ed1ab_0
   - utm=0.7.0=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hd590300_0
@@ -143,7 +143,7 @@ dependencies:
       - pandas === 2.2.0
       - param-sweeps === 0.1.6
       - properties === 0.6.1
-      - pytz === 2023.3.post1
+      - pytz === 2023.4
       - scikit-learn === 1.4.0
       - simpeg-archive === 0.11.0.dev6
       - threadpoolctl === 3.2.0
