--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,15 +33,15 @@ repos:
 #    hooks:
 #    -   id: pyupgrade
 #        args: [--py39-plus]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.1
-    hooks:
-    -   id: mypy
-        additional_dependencies: [
-            types-toml,
-            types-PyYAML,
-            tomli # to read config from pyproject.toml
-        ]
+#-   repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.6.1
+#    hooks:
+#    -   id: mypy
+#        additional_dependencies: [
+#            types-toml,
+#            types-PyYAML,
+#            tomli # to read config from pyproject.toml
+#        ]
 -   repo: https://github.com/codingjoe/relint
     rev: 3.1.0
     hooks:
