--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ scipy = "~1.10.1"
 discretize = {version = "~0.10.0"}
 
 ## pip dependencies
-geoh5py = {version = "~0.8.0rc3", source = "pypi", allow-prereleases = true}
+geoh5py = {version = "~0.9.0a1", source = "pypi", allow-prereleases = true}
 #geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/tags/v0.8.0-rc.2.zip#sha256="}
 #octree-creation-app = {version = "~0.1.0a1", source = "pypi", allow-prereleases = true}
 octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256="}
-geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/GEOPY-488.zip#sha256="}
+#geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/GEOPY-488.zip#sha256="}
+geoapps-utils = {version = "~0.3.0a1", source = "pypi", allow-prereleases = true}
 #simpeg-archive = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/feature/simpeg_archive.zip#sha256="}
 simpeg-archive = {version = "~0.11.0.dev6", source = "pypi", optional = true}
 #mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev3+geoapps.0.11.0.zip#sha256=", optional = true}
