--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ geoana = {version = "~0.4.0"}  # from simpeg
 h5py = "*" # from geoh5py
 mkl = {version = "2022.*"}  # from simpeg
 Pillow = "*" # from geoh5py
+pydantic = {version = "~2.5.2", optional = true}
 pydiso = {version = "~0.0.3", optional = true} # from simpeg
 pymatsolver = {version = "~0.2.0", optional = true} # from simpeg
 tqdm = {version = "^4.64.0", optional = true }
