--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ pytest-cov = "*"
 tomli = "*"
 jupyter-book = "^0.13"
 jupytext = "^1.14"
+sphinx = "^5.0"
+readthedocs-sphinx-ext = "*"
+ipywidgets = {version = "^7.6.5", optional = true}
 
 [tool.conda-lock]
 platforms = ['win-64', 'linux-64']
