--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,9 @@ latex:
 bibtex_bibfiles:
   - references.bib
 
+bibtex_reference_style:
+  - author_year
+
 # Information about where the book exists on the web
 repository:
   url: https://github.com/executablebooks/jupyter-book  # Online location of your book
