Update toc and intro

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Vale-Mira Accelerated Development - Integrated Geophysical Modeling and Targeting
+title: Simpeg-Drivers - Geophysical Inversion with ANALYST
 author: Mira Geoscience
 logo: images/GA-Python_2.png
 
