--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,17 +22,17 @@ scipy = "~1.10.1"
 geoh5py = {version = "~0.9.0a4", source = "pypi", allow-prereleases = true}
 #geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/release/0.9.0.zip#sha256="}
 
-octree-creation-app = {version = "~0.1.0a3", source = "pypi", allow-prereleases = true}
-#octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/release/0.1.0.zip#sha256="}
+#octree-creation-app = {version = "~0.1.0a5", source = "pypi", allow-prereleases = true}
+octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/release/0.1.0.zip#sha256="}
 
-geoapps-utils = {version = "~0.3.0a2", source = "pypi", allow-prereleases = true}
+geoapps-utils = {version = "~0.3.0a3", source = "pypi", allow-prereleases = true}
 #geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/release/0.3.0.zip#sha256="}
 
-#mira-simpeg = {version = "~0.19.0.dev7", source = "pypi"}
+#mira-simpeg = {version = "~0.19.0.dev8", source = "pypi"}
 mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev8+geoapps.0.12.0.zip#sha256="}
 
-param-sweeps = {version = "~0.1.7a1", source = "pypi", allow-prereleases = true}
-#param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/develop.zip#sha256="}
+param-sweeps = {version = "~0.1.7a4", source = "pypi", allow-prereleases = true}
+#param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/release/0.1.7.zip#sha256="}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
