--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ octree-creation-app = {version = "~0.1.0-alpha.5", source = "pypi", allow-prerel
 #octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256="}
 #geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/GEOPY-488.zip#sha256="}
 geoapps-utils = {version = "~0.3.0a3", source = "pypi", allow-prereleases = true}
-mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev8+geoapps.0.12.0.zip#sha256=", optional = true}
-#mira-simpeg = {version = "~0.19.0.dev7", source = "pypi", optional = true}
+#mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev8+geoapps.0.12.0.zip#sha256=", optional = true}
+mira-simpeg = {version = "~0.19.0.dev8", source = "pypi", optional = true}
 param-sweeps = {version = "~0.1.7a3", source = "pypi", allow-prereleases = true}
 #param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/develop.zip#sha256="}
 
