--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,8 @@
 [tool.poetry]
 name = "simpeg-drivers"
 version = "0.1.0-alpha.1"
-description = "Inversion drivers for SimPEG and ANALYST"
-license = "MIT"
+description = "My application"
 authors = ["Mira Geoscience <support@mirageoscience.com>"]
-readme = "README.rst"
-repository = "https://github.com/MiraGeoscience/simpeg-drivers"
-documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
-homepage = "https://mirageoscience.com"
-keywords = [] # TODO: add keywords
-classifiers = [ # TODO add more classifiers
-    "Development Status :: 1 - Pre-Alpha",
-    "Intended Audience :: Science/Research",
-    "Intended Audience :: Developers",
-    "Natural Language :: English",
-    "Topic :: Database",
-    "Topic :: Scientific/Engineering",
-]
 packages = [
      { include = "simpeg_drivers" },
      { include = "simpeg_drivers-assets" },
@@ -24,34 +10,41 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10, <3.11"
-numpy = "~1.23.5" # also geoh5py, simpeg and geoana
-scipy = "~1.10.1"
-discretize = {version = "~0.10.0"}
 
-## pip dependencies
-geoh5py = {version = "~0.9.0-alpha.4", source = "pypi", allow-prereleases = true}
-#geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/tags/v0.8.0-rc.2.zip#sha256="}
-octree-creation-app = {version = "~0.1.0-alpha.5", source = "pypi", allow-prereleases = true}
-#octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256="}
-#geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/GEOPY-488.zip#sha256="}
+dask = {version = "2022.10.*", extras = ["distributed"]}
+discretize = "~0.10.0"
+distributed = "2022.10.*"  # because conda-lock doesn't take dask extras into account
+numpy = "~1.23.5" # also in geoh5py, simpeg
+scipy = "~1.10.1"
+
+## Pip dependencies from Git repositories
+#----------------------------------------
+geoh5py = {version = "~0.9.0a4", source = "pypi", allow-prereleases = true}
+#geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/release/0.9.0.zip#sha256="}
+
+octree-creation-app = {version = "~0.1.0a5", source = "pypi", allow-prereleases = true}
+#octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/release/0.1.0.zip#sha256="}
+
 geoapps-utils = {version = "~0.3.0a3", source = "pypi", allow-prereleases = true}
-#mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev8+geoapps.0.12.0.zip#sha256=", optional = true}
-mira-simpeg = {version = "~0.19.0.dev8", source = "pypi", optional = true}
-param-sweeps = {version = "~0.1.7a3", source = "pypi", allow-prereleases = true}
-#param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/develop.zip#sha256="}
+#geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/release/0.3.0.zip#sha256="}
+
+#mira-simpeg = {version = "~0.19.0.dev8", source = "pypi"}
+mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/v0.19.0.dev8+geoapps.0.12.0.zip#sha256="}
+
+param-sweeps = {version = "~0.1.7a4", source = "pypi", allow-prereleases = true}
+#param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/release/0.1.7.zip#sha256="}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
-dask = {version = "2022.10.*", extras = ["distributed"]}
-distributed = {version = "2022.10.*"}  # because conda-lock doesn't take dask extras into account
-geoana = {version = "~0.4.0"}  # from simpeg
-h5py = "*" # from geoh5py
-mkl = {version = "2022.*"}  # from simpeg
-Pillow = "*" # from geoh5py
-pydantic = {version = "~2.5.2", optional = true}
-pydiso = {version = "~0.0.3", optional = true} # from simpeg
-pymatsolver = {version = "~0.2.0", optional = true} # from simpeg
-tqdm = {version = "^4.64.0", optional = true }
-zarr = {version = "~2.14.2", optional = true} # from simpeg using Dask
+#---------------------------------------------------------------------------------
+Pillow = "^10.0.1"  # from geoh5py
+geoana = "~0.4.0"  # from simpeg
+h5py = "^3.2.1"  # from geoh5py
+mkl = "2022.*"  # from simpeg
+pydantic = "~2.5.2"  # from geoapps-utils
+pydiso = "~0.0.3"  # from simpeg
+pymatsolver = "~0.2.0"  # from simpeg
+tqdm = "^4.64.0"  # from simpeg
+zarr = "~2.14.2"  # from simpeg using Dask
 
 ## about pip dependencies
 # to be specified to work with conda-lock
@@ -64,14 +57,22 @@ zarr = {version = "~2.14.2", optional = true} # from simpeg using Dask
 
 [tool.poetry.dev-dependencies]
 Pygments = "*"
+ipywidgets = "^7.6.5"
+jupyter-book = "^0.13"
+jupytext = "^1.14"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+readthedocs-sphinx-ext = "*"
+sphinx = "^5.0"
 tomli = "*"
 
 [tool.conda-lock]
 platforms = ['win-64', 'linux-64']
 channels = ['conda-forge']
+
+[tool.conda-lock.dependencies]
+libblas = "*=*mkl"  # because simpeg already brings in the MKL
 
 [tool.isort]
 # settings for compatibility between ``isort`` and ``black`` formatting
