--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,9 @@ scipy = "~1.10.1"
 
 ## Pip dependencies from Git repositories
 #----------------------------------------
-geoh5py = {version = "~0.9.0a4", source = "pypi", allow-prereleases = true}
+geoh5py = {version = "~0.9.0rc1", source = "pypi", allow-prereleases = true}
 #geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/release/0.9.0.zip#sha256="}
+#geoh5py = {url = "http://localhost:8888/geoh5py.tar.gz#sha256="}
 
 octree-creation-app = {version = "~0.1.0a5", source = "pypi", allow-prereleases = true}
 #octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/release/0.1.0.zip#sha256="}
