--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ param-sweeps = {version = "~0.1.7a4", source = "pypi", allow-prereleases = true}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
-Pillow = "^10.1.0"  # from geoh5py
+Pillow = "~10.1.0"  # from geoh5py
 geoana = "~0.4.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
 mkl = "2022.1.*"  # from simpeg
