GEOPY-1472: no more autoflake + new dev deps syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ zarr = "~2.14.2"  # from simpeg using Dask
 # Note - conda-lock does not support the syntax: my_package = { git = ... }
 #        while poetry2conda supports only { git = "...", tag = "..." }, and not { url = ... }
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 Pygments = "*"
 ipywidgets = "^7.6.5"
 jupyter-book = "^0.13"
