--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,18 +40,21 @@ geoh5py = {version = "~0.9.0rc1", source = "pypi", allow-prereleases = true}
 #geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/release/0.9.0.zip#sha256="}
 #geoh5py = {url = "http://localhost:8888/geoh5py.tar.gz#sha256="}
 
-octree-creation-app = {version = "~0.1.0a5", source = "pypi", allow-prereleases = true}
+octree-creation-app = {version = "~0.1.0rc1", source = "pypi", allow-prereleases = true}
 #octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/release/0.1.0.zip#sha256="}
+#octree-creation-app = {url = "http://localhost:8888/octree-creation-app.tar.gz#sha256="}
 
-geoapps-utils = {version = "~0.3.0a3", source = "pypi", allow-prereleases = true}
+geoapps-utils = {version = "~0.3.0rc1", source = "pypi", allow-prereleases = true}
 #geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/release/0.3.0.zip#sha256="}
+#geoapps-utils = {url = "http://localhost:8888/geoapps-utils.tar.gz#sha256="}
 
-mira-simpeg = {version = "~0.19.0.8a2", source = "pypi", allow-prereleases = true}
+mira-simpeg = {version = "~0.19.0.8a3", source = "pypi", allow-prereleases = true}
 #mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/0.19.0.8.zip#sha256="}
 #mira-simpeg = {url = "http://localhost:8888/mira-simpeg.tar.gz#sha256="}
 
-param-sweeps = {version = "~0.1.7a4", source = "pypi", allow-prereleases = true}
+param-sweeps = {version = "~0.1.7rc1", source = "pypi", allow-prereleases = true}
 #param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/release/0.1.7.zip#sha256="}
+#param-sweeps = {url = "http://localhost:8888/param-sweeps.tar.gz#sha256="}
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
@@ -64,6 +67,9 @@ pydiso = "~0.0.3"  # from simpeg
 pymatsolver = "~0.2.0"  # from simpeg
 tqdm = "^4.66.1"  # from simpeg
 zarr = "~2.14.2"  # from simpeg using Dask
+
+# force some versions to resolve incompatible resolution between PyPI and Conda
+tzdata = "2023.4"  # through pandas from SimPEG
 
 ## about pip dependencies
 # to be specified to work with conda-lock
