--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.10, <3.11"
 
-dask = {version = "2022.10.*", extras = ["distributed"]}
+dask = {version = "2022.10.*", extras = ["distributed"]}  # also in simpeg[dask]
 discretize = "~0.10.0"
 distributed = "2022.10.*"  # because conda-lock doesn't take dask extras into account
 numpy = "~1.23.5" # also in geoh5py, simpeg
@@ -60,6 +60,7 @@ param-sweeps = {version = "~0.1.7rc1", source = "pypi", allow-prereleases = true
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
 Pillow = "~10.1.0"  # from geoh5py
+fsspec = "2022.*"  # from simpeg[dask]
 geoana = "~0.4.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
 mkl = "2022.1.*"  # from simpeg
