GEOPY-1472: regenerate env lock files (simpeg-rc.1)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ geoapps-utils = {version = "~0.3.0rc1", source = "pypi", allow-prereleases = tru
 #geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/release/0.3.0.zip#sha256="}
 #geoapps-utils = {url = "http://localhost:8888/geoapps-utils.tar.gz#sha256="}
 
-mira-simpeg = {version = ">=0.19.0.8a3,<0.19.0.8.post999", source = "pypi", allow-prereleases = true}
+mira-simpeg = {version = ">=0.19.0.8rc1,<0.19.0.8.post999", source = "pypi", allow-prereleases = true}
 #mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/release/0.19.0.8.zip#sha256="}
 #mira-simpeg = {url = "http://localhost:8888/mira-simpeg.tar.gz#sha256="}
 
