GEOPY-1472: add missing matplotlib for simpeg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ Pillow = "~10.1.0"  # from geoh5py
 fsspec = "2022.*"  # from simpeg[dask]
 geoana = "~0.4.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
+matplotlib = "~3.7.1"  # from simpeg
 mkl = "2022.1.*"  # from simpeg
 pandas = "~2.2.1"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = "~2.5.2"  # from geoapps-utils
