--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -116,7 +116,7 @@ dependencies:
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.43=h2797004_0
   - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.45.3=h2797004_0
+  - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=13.2.0=hc0a3c3a_7
   - libtiff=4.6.0=h1dd3fc0_3
@@ -145,7 +145,7 @@ dependencies:
   - myst-parser=0.18.1=pyhd8ed1ab_0
   - nbclassic=1.1.0=pyhd8ed1ab_0
   - nbclient=0.7.4=pyhd8ed1ab_0
-  - nbconvert-core=7.16.4=pyhd8ed1ab_0
+  - nbconvert-core=7.16.4=pyhd8ed1ab_1
   - nbformat=5.10.4=pyhd8ed1ab_0
   - ncurses=6.5=h59595ed_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
@@ -170,7 +170,7 @@ dependencies:
   - pluggy=1.5.0=pyhd8ed1ab_0
   - pooch=1.8.2=pyhd8ed1ab_0
   - prometheus_client=0.20.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.46=pyha770c72_0
+  - prompt-toolkit=3.0.47=pyha770c72_0
   - psutil=5.9.8=py310h2372a71_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
