--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -103,7 +103,7 @@ dependencies:
   - liblapack=3.9.0=18_win64_mkl
   - libpng=1.6.43=h19919ed_0
   - libsodium=1.0.18=h8d14728_1
-  - libsqlite=3.45.3=hcfcfb64_0
+  - libsqlite=3.46.0=h2466b09_0
   - libssh2=1.11.0=h7dfc565_0
   - libtiff=4.6.0=hddb2be6_3
   - libwebp-base=1.4.0=hcfcfb64_0
@@ -134,7 +134,7 @@ dependencies:
   - myst-parser=0.18.1=pyhd8ed1ab_0
   - nbclassic=1.1.0=pyhd8ed1ab_0
   - nbclient=0.7.4=pyhd8ed1ab_0
-  - nbconvert-core=7.16.4=pyhd8ed1ab_0
+  - nbconvert-core=7.16.4=pyhd8ed1ab_1
   - nbformat=5.10.4=pyhd8ed1ab_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - notebook=6.5.7=pyha770c72_0
@@ -157,7 +157,7 @@ dependencies:
   - pluggy=1.5.0=pyhd8ed1ab_0
   - pooch=1.8.2=pyhd8ed1ab_0
   - prometheus_client=0.20.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.46=pyha770c72_0
+  - prompt-toolkit=3.0.47=pyha770c72_0
   - psutil=5.9.8=py310h8d17308_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=hfa6e2cd_3
