--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -15,7 +15,7 @@ dependencies:
   - brotli-python=1.1.0=py310hc6cd4ac_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.28.1=hd590300_0
-  - ca-certificates=2024.6.2=hbcca054_0
+  - ca-certificates=2024.7.4=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.6.2=pyhd8ed1ab_0
@@ -65,7 +65,7 @@ dependencies:
   - libgcc-ng=14.1.0=h77fa898_0
   - libgfortran-ng=14.1.0=h69a702a_0
   - libgfortran5=14.1.0=hc5f4f2c_0
-  - libhwloc=2.10.0=default_h5622ce7_1001
+  - libhwloc=2.11.0=default_h5622ce7_1000
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=20_linux64_mkl
@@ -125,7 +125,7 @@ dependencies:
   - setuptools=70.1.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - tbb=2021.12.0=h297d8ca_1
+  - tbb=2021.12.0=h434a139_2
   - tblib=3.0.0=pyhd8ed1ab_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tk=8.6.13=noxft_h4845f30_101
@@ -148,7 +148,7 @@ dependencies:
   - zstandard=0.22.0=py310hab88d88_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@a7ec429ede76a9f137d4a2cb0e4409ec91da275c
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@acf608e4106c685fac4b3e94e9ce73ac79b12fdd
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@661d951d1ce2d5016e7f08992062d98d6d5155d5
       - mira-simpeg @ https://github.com/MiraGeoscience/simpeg/archive/refs/heads/develop.zip
       - octree-creation-app @ https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/GEOPY-1569.zip
