lock on updated mira-simpeg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", re
 #mira-simpeg = {version = ">=0.21.2.1-alpha.1, <0.21.2.2.dev", source = "pypi", allow-prereleases = true}
 #mira-simpeg = {url = "https://github.com/MiraGeoscience/simpeg/archive/refs/heads/develop.tar.gz"}
 #mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop"}
-mira-simpeg = {git = "https://github.com/sebhmg/simpeg.git", rev = "GEOPY-1617"}
+mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop"}
 #mira-simpeg = {url = "http://localhost:8888/mira-simpeg.tar.gz"}
 
 #param-sweeps = {version = "~0.1.8-alpha.1", source = "pypi", allow-prereleases = true}
