GEOPY-1687: add "nodefaults" channel

--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -4,6 +4,7 @@
 
 channels:
   - conda-forge
+  - nodefaults
 dependencies:
   - accessible-pygments=0.0.5=pyhd8ed1ab_0
   - alabaster=0.7.16=pyhd8ed1ab_0
