--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -4,6 +4,7 @@
 
 channels:
   - conda-forge
+  - nodefaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -26,7 +27,7 @@ dependencies:
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py310hc6cd4ac_1
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.32.2=h4bc722e_0
+  - c-ares=1.32.3=h4bc722e_0
   - ca-certificates=2024.7.4=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -71,14 +72,14 @@ dependencies:
   - icu=75.1=he02047a_0
   - idna=3.7=pyhd8ed1ab_0
   - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=8.0.0=pyha770c72_0
-  - importlib_metadata=8.0.0=hd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
   - importlib_resources=6.4.0=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - ipykernel=6.29.5=pyh3099207_0
   - ipython=8.26.0=pyh707e725_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_1
-  - ipywidgets=7.8.2=pyhd8ed1ab_0
+  - ipywidgets=7.8.3=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
   - isort=5.13.2=pyhd8ed1ab_0
   - jedi=0.19.1=pyhd8ed1ab_0
@@ -100,8 +101,8 @@ dependencies:
   - jupyterlab=4.2.4=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
   - jupyterlab_server=2.27.3=pyhd8ed1ab_0
-  - jupyterlab_widgets=1.1.8=pyhd8ed1ab_0
-  - jupytext=1.16.3=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.9=pyhd8ed1ab_0
+  - jupytext=1.16.4=pyh80e38bb_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py310hd41b1e2_1
   - krb5=1.21.3=h659f571_0
@@ -115,7 +116,7 @@ dependencies:
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=20_linux64_mkl
-  - libcurl=8.8.0=hca28451_1
+  - libcurl=8.9.0=hdb1bdb2_0
   - libdeflate=1.20=hd590300_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libedit=3.1.20191231=he28a2e2_2
@@ -174,7 +175,7 @@ dependencies:
   - overrides=7.7.0=pyhd8ed1ab_0
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.2=py310hf9f9076_1
-  - pandoc=3.2.1=ha770c72_0
+  - pandoc=3.3=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_0
   - partd=1.4.2=pyhd8ed1ab_0
@@ -204,7 +205,7 @@ dependencies:
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - pytest=8.3.1=pyhd8ed1ab_0
+  - pytest=8.3.2=pyhd8ed1ab_0
   - pytest-cov=5.0.0=pyhd8ed1ab_0
   - python=3.10.14=hd12c33a_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
@@ -221,7 +222,7 @@ dependencies:
   - requests=2.32.3=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.19.0=py310h42e942d_0
+  - rpds-py=0.19.1=py310h42e942d_0
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.0=py310h93e2701_1
   - send2trash=1.8.3=pyh0d859eb_0
@@ -241,12 +242,12 @@ dependencies:
   - sphinx-multitoc-numbering=0.1.3=pyhd8ed1ab_0
   - sphinx-thebe=0.2.1=pyhd8ed1ab_0
   - sphinx-togglebutton=0.3.2=pyhd8ed1ab_0
-  - sphinxcontrib-applehelp=1.0.8=pyhd8ed1ab_0
+  - sphinxcontrib-applehelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-bibtex=2.5.0=pyhd8ed1ab_0
-  - sphinxcontrib-devhelp=1.0.6=pyhd8ed1ab_0
-  - sphinxcontrib-htmlhelp=2.0.6=pyhd8ed1ab_0
+  - sphinxcontrib-devhelp=2.0.0=pyhd8ed1ab_0
+  - sphinxcontrib-htmlhelp=2.1.0=pyhd8ed1ab_0
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
-  - sphinxcontrib-qthelp=1.0.8=pyhd8ed1ab_0
+  - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
   - sqlalchemy=2.0.31=py310hc51659f_0
   - stack_data=0.6.2=pyhd8ed1ab_0
@@ -278,7 +279,7 @@ dependencies:
   - webencodings=0.5.1=pyhd8ed1ab_2
   - websocket-client=1.8.0=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_1
-  - widgetsnbextension=3.6.7=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.8=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.6=h166bdaf_0
@@ -292,12 +293,12 @@ dependencies:
   - pip:
       - empymod === 2.3.1
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@e0cc6f5178fec820647f088f348a2f8db81c58a2
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b5064fb631056dcaa57e379719e923fcd1195f6b
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@7248a2568f3a3fd9b69b14da0b7257c7eeec2ac8
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@24e15f3ecd3b86851087a395966cbf828ce6570f
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1bf3fdeee1ad44d0fd38c97e99081a3541f8bcac
       - scooby === 0.10.0
 
 variables:
