--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -4,6 +4,7 @@
 
 channels:
   - conda-forge
+  - nodefaults
 dependencies:
   - annotated-types=0.7.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
@@ -35,8 +36,8 @@ dependencies:
   - hdf5=1.14.3=nompi_h2b43c12_105
   - hpack=4.0.0=pyh9f0ad1d_0
   - hyperframe=6.0.1=pyhd8ed1ab_0
-  - importlib-metadata=8.0.0=pyha770c72_0
-  - importlib_metadata=8.0.0=hd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
   - intel-openmp=2023.2.0=h57928b3_50497
   - jinja2=3.1.4=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_0
@@ -50,7 +51,7 @@ dependencies:
   - libbrotlidec=1.1.0=hcfcfb64_1
   - libbrotlienc=1.1.0=hcfcfb64_1
   - libcblas=3.9.0=20_win64_mkl
-  - libcurl=8.8.0=hd5e4a3a_1
+  - libcurl=8.9.0=h18fefc2_0
   - libdeflate=1.20=hcfcfb64_0
   - libdlf=0.2.0=pyhd8ed1ab_0
   - libffi=3.4.2=h8ffe710_5
@@ -139,12 +140,12 @@ dependencies:
   - pip:
       - empymod === 2.3.1
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@e0cc6f5178fec820647f088f348a2f8db81c58a2
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@b5064fb631056dcaa57e379719e923fcd1195f6b
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@7248a2568f3a3fd9b69b14da0b7257c7eeec2ac8
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@24e15f3ecd3b86851087a395966cbf828ce6570f
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@1bf3fdeee1ad44d0fd38c97e99081a3541f8bcac
       - scooby === 0.10.0
 
 variables:
