[DEVOPS-452] Disable some Ruff rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,14 @@ ignore = [
     "B028",  # no-explicit-stacklevel for warnings.warn()
     "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
     "F401",  # unsused-import - covered by pycln
+    "BLE001", # TO DO
+    "RUF005", # TO DO
+    "RUF012", # TO DO
+    "RUF015", # TO DO
+    "B007", # TO DO
+    "B020", # TO DO
+    "UP038", # TO DO
+    "TID252", # TO DO
 ]
 select = [
     "A",  # flake8-builtins
